# tiny-gs

./: .gitignore  main.py  pyproject.toml  source.sh
bench/: download_mipnerf360.sh  run_benchmark.py
scripts/: download_tandt.sh  run_benchmark.sh
