[project]
name = "tiny-gs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gsplat>=1.5.3",
    "imageio>=2.37.3",
    "lpips>=0.1.4",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "plyfile>=1.1.3",
    "ruff>=0.15.11",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
