[project]
name = "tiny-gs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gsplat>=1.5.3",
    "lpips>=0.1.4",
    "matplotlib>=3.8",
    "nerfview>=0.0.3",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "plyfile>=1.1.3",
    "ruff>=0.15.11",
    "scipy>=1.15.3",
    "splines>=0.3",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "viser>=0.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
